Departments now work.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -387,3 +387,7 @@ COM_TIMECLOCK_NOTES_PTO_DESC="Why are you giving this user Paid Time Off?"
 COM_TIMECLOCK_TYPE_PTO_DESC="Paid Time Off type.  Carryover is PTO from the previous year, Donation is from or to another user, Manual is just an adjustment of the users PTO."
 COM_TIMECLOCK_PTO_EDIT_DESC="<strong>Note:</strong> Both halves of a donation (giver and receiver) must be entered separately.  The entry for the giver should have negative hours to match the positive hours of the reveiver entry."
 
+COM_TIMECLOCK_NAME_DEPARTMENT_DESC="The name of the departmnet"
+COM_TIMECLOCK_MANAGER_DESC="The manager of this department"
+COM_TIMECLOCK_NOTES_DEPARTMENT_DESC="Notes about this department"
+COM_TIMECLOCK_ACTIVE_DEPARTMENT_DESC="Is this department active?"
