--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -638,3 +638,8 @@ COM_TIMECLOCK_TYPE_PTO_DESC="Paid Time Off type.  Carryover is PTO from the prev
 COM_TIMECLOCK_PTO_EDIT_DESC="<strong>Note:</strong> Both halves of the donation (giver and receiver) must be entered separately.  The entry for the giver should have negative hours to match the positive hours of the reveiver."
 
 COM_TIMECLOCK_VALID_TO_PTO_DESC="This is only required for CARRYOVER.  This is when the carryover expires.  The default is used if left blank."
+
+COM_TIMECLOCK_NAME_DEPARTMENT_DESC="The name of the departmnet"
+COM_TIMECLOCK_MANAGER_DESC="The manager of this department"
+COM_TIMECLOCK_NOTES_DEPARTMENT_DESC="Notes about this department"
+COM_TIMECLOCK_ACTIVE_DEPARTMENT_DESC="Is this department active?"
