Holidays and PTO are now working.

--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -643,3 +643,6 @@ COM_TIMECLOCK_NAME_DEPARTMENT_DESC="The name of the departmnet"
 COM_TIMECLOCK_MANAGER_DESC="The manager of this department"
 COM_TIMECLOCK_NOTES_DEPARTMENT_DESC="Notes about this department"
 COM_TIMECLOCK_ACTIVE_DEPARTMENT_DESC="Is this department active?"
+
+COM_TIMECLOCK_WORK_DATE_NAME_TIMESHEET_DESC="This is the date that the hours were worked."
+COM_TIMECLOCK_PTO_EDIT_TITLE="PTO Entry: [ %s ]"
