--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -646,3 +646,7 @@ COM_TIMECLOCK_ACTIVE_DEPARTMENT_DESC="Is this department active?"
 
 COM_TIMECLOCK_WORK_DATE_NAME_TIMESHEET_DESC="This is the date that the hours were worked."
 COM_TIMECLOCK_PTO_EDIT_TITLE="PTO Entry: [ %s ]"
+
+COM_TIMECLOCK_CHOOSE_USER="Choose User"
+COM_TIMECLOCK_USER_TIMESHEET_DESC="The user this timesheet is for"
+COM_TIMECLOCK_WORK_DATE_NAME_TIMESHEET_DESC="The day that this time was worked"
