Added in reports and did some cleanup.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -399,3 +399,9 @@ COM_TIMECLOCK_CHOOSE_USER="Choose User"
 COM_TIMECLOCK_CHOOSE_PROJECT="Choose Project"
 COM_TIMECLOCK_USER_TIMESHEET_DESC="The user this timesheet is for"
 COM_TIMECLOCK_WORK_DATE_NAME_TIMESHEET_DESC="The day that this time was worked"
+
+COM_TIMECLOCK_NAME_REPORT_DESC="The name of the report"
+COM_TIMECLOCK_NOTES_REPORT_DESC="The description of the report"
+COM_TIMECLOCK_ACTIVE_REPORT_DESC="If this report is active or not"
+COM_TIMECLOCK_REPORT_EDIT_TITLE="Report Entry: [ %s ]"
+COM_TIMECLOCK_TIMECLOCK_REPORTS="Timeclock Reports"
