Fixed the plugin and removed some old files.

--- a/plg_user_timeclock/language/fr-FR/fr-FR.plg_user_timeclock.ini
+++ b/plg_user_timeclock/language/fr-FR/fr-FR.plg_user_timeclock.ini
@@ -109,3 +109,6 @@ PLG_USER_TIMECLOCK_DEPARTMENT_DESC="The department the user is associated with"
 
 PLG_USER_TIMECLOCK_BILLABLE_RATE="Billable Rate"
 PLG_USER_TIMECLOCK_BILLABLE_RATE_DESC="The rate at which this user is billed out to customers"
+
+PLUG_USER_TIMECLOCK_START_DATE_DESC="This is the first day the user is employed."
+PLUG_USER_TIMECLOCK_NO_TIME_BEFORE_DESC="The first day this user can enter time."
