--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -349,8 +349,18 @@ COM_TIMECLOCK_GENERAL_DESC="This is uncategorized projects.  Everything without 
 
 COM_TIMECLOCK_ACTION_TIMESHEET="Timesheet"
 COM_TIMECLOCK_ACTION_REPORTS="Timeclock Reports"
-COM_TIMECLOCK_ACCESS_TIMESHEET_DESC="Allows users in the group to access their timesheet"
+COM_TIMECLOCK_ACCESS_TIMESHEET_DESC="This is set by the Timeclock enable toggle in the user edit screen."
 COM_TIMECLOCK_ACCESS_REPORTS_DESC="Allows users in the group to access the timeclock reports"
+COM_TIMECLOCK_ACTION_TIMESHEET_VERIFY="Timesheet Verification"
+COM_TIMECLOCK_ACCESS_TIMESHEET_VERIFY_DESC="Allow users to verify other peoples timecards"
+COM_TIMECLOCK_ACTION_TIMESHEET_OTHERS="View Others"
+COM_TIMECLOCK_ACCESS_TIMESHEET_OTHERS_DESC="Allow users to view other peoples timecards"
+COM_TIMECLOCK_ACTION_PAYROLL="View Payroll"
+COM_TIMECLOCK_ACCESS_PAYROLL_DESC="Allow users to view the payroll report"
+COM_TIMECLOCK_ACTION_PAYROLL_LOCK="Lock Payperiod"
+COM_TIMECLOCK_ACCESS_PAYROLL_LOCK_DESC="Allow users to lock payperiods"
+COM_TIMECLOCK_ACTION="Timeclock Access"
+COM_TIMECLOCK_ACCESS_DESC="Access to the timeclock software"
 
 COM_TIMECLOCK_SELECT_CATEGORY="- Select Category -"
 COM_TIMECLOCK_SELECT_DEPARTMENT="- Select Department -"
