--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -570,12 +570,17 @@ COM_TIMECLOCK_GENERAL="General"
 COM_TIMECLOCK_GENERAL_DESC="Projets non catégorisés. Entrer ici tous les projets sans catégorie."
 
 COM_TIMECLOCK_ACTION_TIMESHEET="Feuille de temps"
-
-COM_TIMECLOCK_ACTION_REPORTS="Rapports"
-
 COM_TIMECLOCK_ACCESS_TIMESHEET_DESC="Autorise les utilisateurs du groupe à accéder à leur feuille de temps"
-
+COM_TIMECLOCK_ACTION_REPORTS="Rapports"
 COM_TIMECLOCK_ACCESS_REPORTS_DESC="Autorise les utilisateurs du groupe à accéder aux rapports"
+COM_TIMECLOCK_ACTION_TIMESHEET_VERIFY="Timesheet Verification"
+COM_TIMECLOCK_ACCESS_TIMESHEET_VERIFY_DESC="Allow users to verify other peoples timecards"
+COM_TIMECLOCK_ACTION_TIMESHEET_OTHERS="View Others"
+COM_TIMECLOCK_ACCESS_TIMESHEET_OTHERS_DESC="Allow users to view other peoples timecards"
+COM_TIMECLOCK_ACTION_PAYROLL="View Payroll"
+COM_TIMECLOCK_ACCESS_PAYROLL_DESC="Allow users to view the payroll report"
+COM_TIMECLOCK_ACTION_PAYROLL_LOCK="Lock Payperiod"
+COM_TIMECLOCK_ACCESS_PAYROLL_LOCK_DESC="Allow users to lock payperiods"
 
 COM_TIMECLOCK_SELECT_CATEGORY="- Select Category -"
 COM_TIMECLOCK_SELECT_DEPARTMENT="- Select Department -"
