This fixes #14.  Timesheets can now be marked as approved.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -351,8 +351,8 @@ COM_TIMECLOCK_ACTION_TIMESHEET="Timesheet"
 COM_TIMECLOCK_ACTION_REPORTS="Timeclock Reports"
 COM_TIMECLOCK_ACCESS_TIMESHEET_DESC="This is set by the Timeclock enable toggle in the user edit screen."
 COM_TIMECLOCK_ACCESS_REPORTS_DESC="Allows users in the group to access the timeclock reports"
-COM_TIMECLOCK_ACTION_TIMESHEET_VERIFY="Timesheet Verification"
-COM_TIMECLOCK_ACCESS_TIMESHEET_VERIFY_DESC="Allow users to verify other peoples timecards"
+COM_TIMECLOCK_ACTION_TIMESHEET_APPROVE="Timesheet Approval"
+COM_TIMECLOCK_ACCESS_TIMESHEET_APPROVE_DESC="Allow users to approve other peoples timecards"
 COM_TIMECLOCK_ACTION_TIMESHEET_OTHERS="View Others"
 COM_TIMECLOCK_ACCESS_TIMESHEET_OTHERS_DESC="Allow users to view other peoples timecards"
 COM_TIMECLOCK_ACTION_PAYROLL="View Payroll"
