--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -573,8 +573,8 @@ COM_TIMECLOCK_ACTION_TIMESHEET="Feuille de temps"
 COM_TIMECLOCK_ACCESS_TIMESHEET_DESC="Autorise les utilisateurs du groupe à accéder à leur feuille de temps"
 COM_TIMECLOCK_ACTION_REPORTS="Rapports"
 COM_TIMECLOCK_ACCESS_REPORTS_DESC="Autorise les utilisateurs du groupe à accéder aux rapports"
-COM_TIMECLOCK_ACTION_TIMESHEET_VERIFY="Timesheet Verification"
-COM_TIMECLOCK_ACCESS_TIMESHEET_VERIFY_DESC="Allow users to verify other peoples timecards"
+COM_TIMECLOCK_ACTION_TIMESHEET_APPROVE="Timesheet Approval"
+COM_TIMECLOCK_ACCESS_TIMESHEET_APPROVE_DESC="Allow users to approve other peoples timecards"
 COM_TIMECLOCK_ACTION_TIMESHEET_OTHERS="View Others"
 COM_TIMECLOCK_ACCESS_TIMESHEET_OTHERS_DESC="Allow users to view other peoples timecards"
 COM_TIMECLOCK_ACTION_PAYROLL="View Payroll"
