--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -140,6 +140,7 @@ COM_TIMECLOCK_ENTERED="Entered"
 COM_TIMECLOCK_GO="Go"
 COM_TIMECLOCK_DISPLAY_NUM="Display Num"
 COM_TIMECLOCK_WORKED="Worked"
+COM_TIMECLOCK_APPROVED="Approved"
 COM_TIMECLOCK_EMPLOYEE="Employee"
 COM_TIMECLOCK_GROUP_BY="Group by"
 COM_TIMECLOCK_APPLY="Apply"
@@ -187,10 +188,16 @@ COM_TIMECLOCK_REPORT_SAVE_FAILED="Report save failed."
 COM_TIMECLOCK_SAVED_DATA="Saved Data"
 COM_TIMECLOCK_LIVE_DATA="Live Data"
 
-COM_TIMECLOCK_TIMESHEET_DONE="Timesheet Done"
+COM_TIMECLOCK_TIMESHEET_COMPLETE="Timesheet Done"
 COM_TIMECLOCK_PAYPERIOD_COMPLETE="Timesheet set to complete"
 COM_TIMECLOCK_PAYPERIOD_COMPLETE_FAILED="Timesheet NOT set to complete"
 COM_TIMECLOCK_COMPLETE="Complete"
+COM_TIMECLOCK_TIMESHEET_APPROVE="Approve"
+COM_TIMECLOCK_TIMESHEET_DISAPPROVE="Disapprove"
+COM_TIMECLOCK_PAYPERIOD_APPROVED="Successfully Approved"
+COM_TIMECLOCK_PAYPERIOD_APPROVAL_FAILED="Approval Failed"
+COM_TIMECLOCK_PAYPERIOD_DISAPPROVED="Successfully Disapproved"
+COM_TIMECLOCK_PAYPERIOD_DISAPPROVAL_FAILED="Disapproval Failed"
 
 COM_TIMECLOCK_PAID_TIME="Paid Time"
 COM_TIMECLOCK_VOLUNTEER_TIME="Volunteer Time"
