--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -185,10 +185,16 @@ COM_TIMECLOCK_UNLOCK_PAYPERIOD="Unlock Payperiod"
 COM_TIMECLOCK_SAVED_DATA="Saved Data"
 COM_TIMECLOCK_LIVE_DATA="Live Data"
 
-COM_TIMECLOCK_TIMESHEET_DONE="Timesheet Done"
+COM_TIMECLOCK_TIMESHEET_COMPLETE="Timesheet Done"
 COM_TIMECLOCK_PAYPERIOD_COMPLETE="Timesheet set to complete"
 COM_TIMECLOCK_PAYPERIOD_COMPLETE_FAILED="Timesheet NOT set to complete"
 COM_TIMECLOCK_COMPLETE="Complete"
+COM_TIMECLOCK_TIMESHEET_APPROVED="Approved"
+COM_TIMECLOCK_TIMESHEET_DISAPPROVE="Disapprove"
+COM_TIMECLOCK_PAYPERIOD_APPROVED="Successfully Approved"
+COM_TIMECLOCK_PAYPERIOD_APPROVAL_FAILED="Approval Failed"
+COM_TIMECLOCK_PAYPERIOD_DISAPPROVED="Successfully Disapproved"
+COM_TIMECLOCK_PAYPERIOD_DISAPPROVAL_FAILED="Disapproval Failed"
 
 COM_TIMECLOCK_PAID_TIME="Paid Time"
 COM_TIMECLOCK_VOLUNTEER_TIME="Volunteer Time"
