Added the config button to the Tools page.  It was missing.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -244,3 +244,5 @@ COM_TIMECLOCK_FLOATING_HOLIDAY_WARNING="Whatever number you enter here will be m
 COM_TIMECLOCK_VALID_VALUES="Valid Values"
 
 COM_TIMECLOCK_YTD_LEFT="Hours left for the year"
+
+COM_TIMECLOCK_NOT_ALLOWED="Not Allowed"
