--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -196,8 +196,10 @@ COM_TIMECLOCK_TIMESHEET_APPROVE="Approve"
 COM_TIMECLOCK_TIMESHEET_DISAPPROVE="Disapprove"
 COM_TIMECLOCK_PAYPERIOD_APPROVED="Successfully Approved"
 COM_TIMECLOCK_PAYPERIOD_APPROVAL_FAILED="Approval Failed"
+COM_TIMECLOCK_PAYPERIOD_APPROVAL_FAILED_LOCKED="Approval Failed.  Approval not possible on a locked payperiod."
 COM_TIMECLOCK_PAYPERIOD_DISAPPROVED="Successfully Disapproved"
 COM_TIMECLOCK_PAYPERIOD_DISAPPROVAL_FAILED="Disapproval Failed"
+COM_TIMECLOCK_PAYPERIOD_DISAPPROVAL_FAILED_LOCKED="Disapproval Failed.  Disapproval not possible on a locked payperiod."
 
 COM_TIMECLOCK_PAID_TIME="Paid Time"
 COM_TIMECLOCK_VOLUNTEER_TIME="Volunteer Time"
