Fixed the logging so that it logs errors as well.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -196,10 +196,10 @@ COM_TIMECLOCK_TIMESHEET_APPROVE="Approve"
 COM_TIMECLOCK_TIMESHEET_DISAPPROVE="Disapprove"
 COM_TIMECLOCK_PAYPERIOD_APPROVED="Successfully Approved"
 COM_TIMECLOCK_PAYPERIOD_APPROVAL_FAILED="Approval Failed"
-COM_TIMECLOCK_PAYPERIOD_APPROVAL_FAILED_LOCKED="Approval Failed.  Approval not possible on a locked payperiod."
+COM_TIMECLOCK_PAYPERIOD_APPROVAL_FAILED_LOCKED="Approval not possible on a locked payperiod."
 COM_TIMECLOCK_PAYPERIOD_DISAPPROVED="Successfully Disapproved"
 COM_TIMECLOCK_PAYPERIOD_DISAPPROVAL_FAILED="Disapproval Failed"
-COM_TIMECLOCK_PAYPERIOD_DISAPPROVAL_FAILED_LOCKED="Disapproval Failed.  Disapproval not possible on a locked payperiod."
+COM_TIMECLOCK_PAYPERIOD_DISAPPROVAL_FAILED_LOCKED="Disapproval not possible on a locked payperiod."
 
 COM_TIMECLOCK_PAID_TIME="Paid Time"
 COM_TIMECLOCK_VOLUNTEER_TIME="Volunteer Time"
@@ -249,6 +249,6 @@ COM_TIMECLOCK_YTD_LEFT="Hours left for the year"
 
 COM_TIMECLOCK_NOT_ALLOWED="Not Allowed"
 
-COM_TIMECLOCK_ACTION_LOG_COMPLETE="User <a href='{userlink}'>{username}</a> marked their <a href='{timesheetlink}'>timesheet</a> complete for the <a href='{payrolllink}'>payperiod</a> starting {payperiodstart}"
-COM_TIMECLOCK_ACTION_LOG_APPROVE="User <a href='{userlink}'>{username}</a> approved the <a href='{timesheetlink}'>timesheet</a> for <a href='{forlink}'>{forname}</a> for the <a href='{payrolllink}'>payperiod</a> starting {payperiodstart}"
-COM_TIMECLOCK_ACTION_LOG_DISAPPROVE="User <a href='{userlink}'>{username}</a> disapproved the <a href='{timesheetlink}'>timesheet</a> for <a href='{forlink}'>{forname}</a> for the <a href='{payrolllink}'>payperiod</a> starting {payperiodstart}"
+COM_TIMECLOCK_ACTION_LOG_COMPLETE="User <a href='{userlink}'>{username}</a> marked their <a href='{timesheetlink}'>timesheet</a> complete for the {payperiodstart} <a href='{payrolllink}'>payperiod</a> ({status}) {message}"
+COM_TIMECLOCK_ACTION_LOG_APPROVE="User <a href='{userlink}'>{username}</a> approved the <a href='{timesheetlink}'>timesheet</a> for <a href='{forlink}'>{forname}</a> for the {payperiodstart} <a href='{payrolllink}'>payperiod</a> ({status}) {message}"
+COM_TIMECLOCK_ACTION_LOG_DISAPPROVE="User <a href='{userlink}'>{username}</a> disapproved the <a href='{timesheetlink}'>timesheet</a> for <a href='{forlink}'>{forname}</a> for the {payperiodstart} <a href='{payrolllink}'>payperiod</a> ({status}) {message}"
