Cleaned up and streamlined the logging.

--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -323,6 +323,6 @@ COM_TIMECLOCK_VALID_VALUES="Valid Values"
 
 COM_TIMECLOCK_YTD_LEFT="Hours left for the year"
 
-COM_TIMECLOCK_ACTION_LOG_COMPLETE="User <a href='{userlink}'>{username}</a> marked their <a href='{timesheetlink}'>timesheet</a> complete for the {payperiodstart} <a href='{payrolllink}'>payperiod</a> ({status}) {message}"
+COM_TIMECLOCK_ACTION_LOG_COMPLETE="User <a href='{userlink}'>{username}</a> completed the <a href='{timesheetlink}'>timesheet</a> for <a href='{forlink}'>{forname}</a> for the {payperiodstart} <a href='{payrolllink}'>payperiod</a> ({status}) {message}"
 COM_TIMECLOCK_ACTION_LOG_APPROVE="User <a href='{userlink}'>{username}</a> approved the <a href='{timesheetlink}'>timesheet</a> for <a href='{forlink}'>{forname}</a> for the {payperiodstart} <a href='{payrolllink}'>payperiod</a> ({status}) {message}"
 COM_TIMECLOCK_ACTION_LOG_DISAPPROVE="User <a href='{userlink}'>{username}</a> disapproved the <a href='{timesheetlink}'>timesheet</a> for <a href='{forlink}'>{forname}</a> for the {payperiodstart} <a href='{payrolllink}'>payperiod</a> ({status}) {message}"
