Added a table for managers approvals in the payroll report.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -131,6 +131,7 @@ COM_TIMECLOCK_GENERAL_DESC="This is uncategorized projects.  Everything without 
 
 COM_TIMECLOCK_PROJECT_MANAGER="Project Manager"
 COM_TIMECLOCK_USER_MANAGER="User Manager"
+COM_TIMECLOCK_USER_MANAGERS_APPROVAL="User Manager Approvals"
 COM_TIMECLOCK_CUSTOMER="Customer"
 COM_TIMECLOCK_OR="or"
 COM_TIMECLOCK_TO="to"
@@ -149,6 +150,9 @@ COM_TIMECLOCK_RESET="Reset"
 COM_TIMECLOCK_FILTER="Filter"
 COM_TIMECLOCK_IN="in"
 COM_TIMECLOCK_NO_DATA_FOUND="No data found"
+COM_TIMECLOCK_MANAGER="Manager"
+COM_TIMECLOCK_DONE="Done"
+COM_TIMECLOCK_NOT_DONE="Not Done"
 
 COM_TIMECLOCK_BAD_FORM_TOKEN="Bad form token.  Please try again."
 COM_TIMECLOCK_PREFS_SAVED="Preferences Saved!"
