--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -116,6 +116,7 @@ COM_TIMECLOCK_GENERAL_DESC="Projets non catégorisés. TOus les projets sans cat
 COM_TIMECLOCK_PROJECT_MANAGER="Chef de projet"
 
 COM_TIMECLOCK_USER_MANAGER="Chef de l'utilisateur"
+COM_TIMECLOCK_USER_MANAGERS_APPROVAL="User Manager Approvals"
 
 COM_TIMECLOCK_CUSTOMER="Client"
 
@@ -223,6 +224,9 @@ COM_TIMECLOCK_HIDE_EMPTY="Hide Empty"
 COM_TIMECLOCK_RESET="Reset"
 COM_TIMECLOCK_FILTER="Filter"
 COM_TIMECLOCK_IN="in"
+COM_TIMECLOCK_MANAGER="Manager"
+COM_TIMECLOCK_DONE="Done"
+COM_TIMECLOCK_NOT_DONE="Not Done"
 COM_TIMECLOCK_REPORT_IT_HERE="Report it here"
 COM_TIMECLOCK_NO_NEW_HOURS="No new hours"
 COM_TIMECLOCK_UNKNOWN="Unknown"
