This fixes #19.  There is now a separate type for Paid Volunteer time.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -346,6 +346,8 @@ COM_TIMECLOCK_UNPAID="Unpaid Time"
 COM_TIMECLOCK_UNPAID_DESC="This time is not used for billing customers or for payroll reports"
 COM_TIMECLOCK_GENERAL="None"
 COM_TIMECLOCK_GENERAL_DESC="This is uncategorized projects.  Everything without a category goes here."
+COM_TIMECLOCK_VOLUNTEER="Paid Volunteer Time"
+COM_TIMECLOCK_VOLUNTEER_DESC="This time is PAID volunteer time."
 
 COM_TIMECLOCK_ACTION_TIMESHEET="Timesheet"
 COM_TIMECLOCK_ACTION_REPORTS="Timeclock Reports"
