--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -564,6 +564,8 @@ COM_TIMECLOCK_SPECIAL_DESC="Cette catégorie est prévue pour les vacances et le
 COM_TIMECLOCK_UNPAID="Temps non payé"
 
 COM_TIMECLOCK_UNPAID_DESC="Ces temps ne sont pas utilisés pour la facturation aux clients ou pour les rapports des salariés"
+COM_TIMECLOCK_VOLUNTEER="Paid Volunteer Time"
+COM_TIMECLOCK_VOLUNTEER_DESC="This time is PAID volunteer time."
 
 COM_TIMECLOCK_GENERAL="General"
 
