--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -227,7 +227,8 @@ COM_TIMECLOCK_MONEY="Money"
 
 COM_TIMECLOCK_REPORT_DATES="Report Dates"
 
-COM_TIMECLOCK_VOLUNTEER="Volunteer"
+COM_TIMECLOCK_VOLUNTEER="Paid Volunteer"
+COM_TIMECLOCK_UNPAID="Unpaid Volunteer"
 COM_TIMECLOCK_CONTROLS="Controls"
 
 COM_TIMECLOCK_SHOW_ZERO="Show Zeros"
