Adding jQuery to all pages, some fixing in the titles, and fixed the user project picker.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -231,6 +231,7 @@ COM_TIMECLOCK_WORKERS_COMP_CODES = "Workers Comp Codes"
 COM_TIMECLOCK_CUSTOMER = "Customer"
 COM_TIMECLOCK_USERS = "Users"
 COM_TIMECLOCK_TIMECLOCK_TIMESHEETS = "Timeclock Timesheets"
+COM_TIMECLOCK_TIMECLOCK_PTOS = "Timeclock PTO"
 COM_TIMECLOCK_EDIT_PROJECT = "Edit Project"
 COM_TIMECLOCK_EDIT_USER = "Edit User"
 COM_TIMECLOCK_EDIT_TIMESHEET = "Edit Timesheet"
