--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -369,6 +369,8 @@ COM_TIMECLOCK_USERS = "Utilisateurs"
 
 COM_TIMECLOCK_TIMECLOCK_TIMESHEETS = "Feuilles de temps"
 
+COM_TIMECLOCK_TIMECLOCK_PTOS = "Timeclock PTO"
+
 COM_TIMECLOCK_EDIT_PROJECT = "Afficher projet"
 
 COM_TIMECLOCK_EDIT_USER = "Affichier utilisateur"
