The assign projects to users now works again.

--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -667,3 +667,6 @@ COM_TIMECLOCK_REPORT_EDIT_TITLE="Report Entry: [ %s ]"
 COM_TIMECLOCK_TIMECLOCK_REPORTS="Timeclock Reports"
 
 COM_TIMECLOCK_CHOOSE_PROJECT="Choose Project"
+
+COM_TIMECLOCK_ACTION="Timeclock Access"
+COM_TIMECLOCK_ACCESS_DESC="Access to the timeclock software"
