--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -330,3 +330,10 @@ COM_TIMECLOCK_YTD_LEFT="Hours left for the year"
 COM_TIMECLOCK_ACTION_LOG_COMPLETE="User <a href='{userlink}'>{username}</a> completed the <a href='{timesheetlink}'>timesheet</a> for <a href='{forlink}'>{forname}</a> for the {payperiodstart} <a href='{payrolllink}'>payperiod</a> ({status}) {message}"
 COM_TIMECLOCK_ACTION_LOG_APPROVE="User <a href='{userlink}'>{username}</a> approved the <a href='{timesheetlink}'>timesheet</a> for <a href='{forlink}'>{forname}</a> for the {payperiodstart} <a href='{payrolllink}'>payperiod</a> ({status}) {message}"
 COM_TIMECLOCK_ACTION_LOG_DISAPPROVE="User <a href='{userlink}'>{username}</a> disapproved the <a href='{timesheetlink}'>timesheet</a> for <a href='{forlink}'>{forname}</a> for the {payperiodstart} <a href='{payrolllink}'>payperiod</a> ({status}) {message}"
+
+COM_TIMECLOCK_APPROVED="Approved"
+COM_TIMECLOCK_TIMESHEET_APPROVE="Approve"
+COM_TIMECLOCK_PAYPERIOD_APPROVAL_FAILED_LOCKED="Approval not possible on a locked payperiod."
+COM_TIMECLOCK_PAYPERIOD_DISAPPROVAL_FAILED_LOCKED="Disapproval not possible on a locked payperiod."
+COM_TIMECLOCK_NOT_ALLOWED="Not Allowed"
+COM_TIMECLOCK_ACTION_LOG_ACCESS="User <a href='{userlink}'>{username}</a> accessed the <a href='{timesheetlink}'>timesheet</a> for <a href='{forlink}'>{forname}</a> for the {payperiodstart} <a href='{payrolllink}'>payperiod</a>"
