--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -40,6 +40,7 @@ COM_TIMECLOCK_DATE_TO_DATE="%s to %s"
 COM_TIMECLOCK_TIMESHEET_TITLE="Timesheet for %s - %s to %s"
 COM_TIMECLOCK_PAYROLL_TITLE="Payroll - %s to %s"
 COM_TIMECLOCK_PAYROLL="Payroll"
+COM_TIMECLOCK_PAYROLL_REPORT="Payroll Report"
 COM_TIMECLOCK_REPORT_TITLE="Time Report - %s to %s"
 COM_TIMECLOCK_REPORT="Time Report"
 COM_TIMECLOCK_USERSUM_REPORT_TITLE="User Summary Report - %s to %s"
