--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -47,6 +47,7 @@ COM_TIMECLOCK_DATE_TO_DATE="%s à %s"
 COM_TIMECLOCK_TIMESHEET_TITLE="Feuille de temps pour %s - %s à %s"
 COM_TIMECLOCK_PAYROLL_TITLE="Payroll - %s to %s"
 COM_TIMECLOCK_PAYROLL="Payroll"
+COM_TIMECLOCK_PAYROLL_REPORT="Payroll Report"
 COM_TIMECLOCK_REPORT_TITLE="Time Report - %s to %s"
 COM_TIMECLOCK_REPORT="Time Report"
 
