--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -355,11 +355,17 @@ COM_TIMECLOCK_ACTION_REPORTS="Timeclock Reports"
 COM_TIMECLOCK_ACCESS_TIMESHEET_DESC="This is set by the Timeclock enable toggle in the user edit screen."
 COM_TIMECLOCK_ACCESS_REPORTS_DESC="Allows users in the group to access the timeclock reports"
 COM_TIMECLOCK_ACTION_TIMESHEET_APPROVE="Timesheet Approval"
-COM_TIMECLOCK_ACCESS_TIMESHEET_APPROVE_DESC="Allow users to approve other peoples timecards"
+COM_TIMECLOCK_ACCESS_TIMESHEET_APPROVE_DESC="Allow managers to approve their peoples timecards"
+COM_TIMECLOCK_ACTION_TIMESHEET_APPROVE_ALL="Timesheet Approval of All"
+COM_TIMECLOCK_ACCESS_TIMESHEET_APPROVE_ALL_DESC="Allow users to approve all other peoples timecards"
 COM_TIMECLOCK_ACTION_TIMESHEET_OTHERS="View Others"
-COM_TIMECLOCK_ACCESS_TIMESHEET_OTHERS_DESC="Allow users to view other peoples timecards"
+COM_TIMECLOCK_ACCESS_TIMESHEET_OTHERS_DESC="Allow managers to view their peoples timecards"
+COM_TIMECLOCK_ACTION_TIMESHEET_ALL_OTHERS="View All Others"
+COM_TIMECLOCK_ACCESS_TIMESHEET_ALL_OTHERS_DESC="Allow users to view all other peoples timecards"
 COM_TIMECLOCK_ACTION_PAYROLL="View Payroll"
-COM_TIMECLOCK_ACCESS_PAYROLL_DESC="Allow users to view the payroll report"
+COM_TIMECLOCK_ACCESS_PAYROLL_DESC="Allow managers to view the their peoples payroll report"
+COM_TIMECLOCK_ACTION_PAYROLL_ALL="View All Payroll"
+COM_TIMECLOCK_ACCESS_PAYROLL_ALL_DESC="Allow users to view the payroll report for all other users"
 COM_TIMECLOCK_ACTION_PAYROLL_LOCK="Lock Payperiod"
 COM_TIMECLOCK_ACCESS_PAYROLL_LOCK_DESC="Allow users to lock payperiods"
 COM_TIMECLOCK_ACTION="Timeclock Access"
